--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="media.css">
 </head>
 
 <body>
@@ -91,7 +92,7 @@
     </section>
 
     <div class="separation"></div>
-    <section>
+    <section class="faqq">
         <h2>Frequently Asked Questions</h2>
         <div class="faq">
             <span>What is Netflix?</span>
